Added S-Passion project
the folder for the S-passion project

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,30 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@400;500&display=swap');
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3, .logo {
+  font-family: 'Poppins', sans-serif;
+}
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: clip; /* Kills horizontal overflow permanently */
+  /* overflow-y: auto; */
+}
+
+* {
+  box-sizing: border-box; /* Stops padding from expanding widths */
+}
+html {
+  scrollbar-width: none; /* Firefox */
+}
+
+html::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Edge */
+}
+
