--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -57,7 +57,7 @@ line-height: 0;
 
 @media(max-width:768px){
 .spassion-name{
-  display: flex;
+  display: none;
 flex-direction: column;
 padding: 0;
 justify-content: center;
