--- a/src/component/Hero/Hero.css
+++ b/src/component/Hero/Hero.css
@@ -4,21 +4,20 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 50px 10%;
+  padding: 4rem 5%;
   background: linear-gradient(135deg, #002147, #003366);
   color: white;
   flex-wrap: wrap;
   animation: fadeInHero 1s ease-in-out;
   position: relative;
   overflow: hidden;
-  height: 100vh;
+  height: 80vh;
   background-size: cover;    
   background-position: center; 
   background-repeat: no-repeat;
 }
 
 .hero-text {
-  /* max-width: 500px; */
   animation: slideUp 1s ease-in-out;
    position: relative;
   text-align: left;
@@ -27,7 +26,7 @@
 
 }
 .hero-text p {
-  font-size: 18px;
+  font-size: 22px;
   font-style: italic;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -81,14 +80,11 @@
 }
 .hero-buttons {
     display: flex;
-    /* justify-content: center; */
     gap:8px;
-
   }
 
 .btn {
-    /* display: flex */
-  padding: 10px 20px;
+  padding: 15px 20px;
   border-radius: 5px;
   text-decoration: none;
   font-weight: bold;
@@ -108,9 +104,8 @@
 }
 
 .academy-btn {
-  /* border: 2px solid #ffcc00; */
   color: #ffcc00;
-  padding: 9px 20px;
+  padding: 15px 20px;
   background: linear-gradient(45deg, #ffffff, #f5f5f5);
   color: #002147;
   margin-top: 10px;
