--- a/src/component/Product/ProductCard.css
+++ b/src/component/Product/ProductCard.css
@@ -15,6 +15,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   gap: 15px;
+  margin-left: 2rem;
 }
 
 .product-card {
