--- a/src/pages/Academy/Academy.css
+++ b/src/pages/Academy/Academy.css
@@ -27,7 +27,7 @@
 }
 .academy-card img {
   width: 100%;
-  height: 140px;
+  height: 14rem;
   object-fit: cover;
   border-radius: 8px;
   margin-bottom: 15px;
@@ -59,7 +59,7 @@
   margin-bottom: 36px;
   gap: 10px;
   flex-wrap: wrap;
-  min-height: 75vh;
+  min-height: 55vh;
   box-sizing: border-box;
 }
 .hero-content {
@@ -92,10 +92,10 @@
   background: #002147;
   color: #fff;
 }
-.hero-image img {
+.hero-image {
   width: 360px;
-  max-width:100%;
-  height:100%;
+  /* max-width:100%; */
+  height:20rem;
   border-radius: 10px;
 }
 @media (max-width: 768px) {
@@ -105,8 +105,6 @@
   line-height: 1;
 }
   .hero-image img {
-    /* width: 100%;
-    max-width: 300px; */
     display:none;
   }
   .academy-category-select{    /* width: 100%; */
@@ -115,15 +113,10 @@
      width: 100%;
   }
   .academy-filters  {
-    /* display: flex; */
-    /* justify-content: flex-start; */
     margin: 16px 0;
     text-align: left;
   }
-  /* margin-right: 60px !important; */
-  /* text-align:left; */
   
-/* } */
 }
 .duration {
   display: flex;
