--- a/academy-store/src/pages/Academy/Academy.css
+++ b/academy-store/src/pages/Academy/Academy.css
@@ -94,7 +94,6 @@
 }
 .hero-image {
   width: 360px;
-  /* max-width:100%; */
   height:20rem;
   border-radius: 10px;
 }
@@ -105,7 +104,7 @@
   line-height: 1;
 }
   .hero-image img {
-    display:none;
+    display:flex;
   }
   .academy-category-select{    /* width: 100%; */
     text-align: left;
